# demo-python

./: .gitignore  Pipfile  README.md  docker-compose.yml  pytest.json  requirements.txt  setup.cfg
src/engi_python_demo/: superfluous.py
test/: test_demo.py
