[metadata]
name = engi-python-demo
version = 0.0.1
author = Christopher Kelly
author_email = christopherkelly@engi.network
description = Engi Demo Python Project
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/engi-network/demo-python
project_urls =
    Bug Tracker = https://github.com/engi-network/demo-python/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.9

[options.packages.find]
where = src